--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
     "replicate": "^0.32.0",
-    "tailwind-merge": "^3.0.2"
+    "tailwind-merge": "^3.0.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20",
