Add PWA support and enhance user experience

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,9 @@
   "description": "Your personal recipe manager",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#1F2937",
-  "theme_color": "#1F2937",
+  "background_color": "#111827",
+  "theme_color": "#111827",
+  "orientation": "portrait-primary",
   "icons": [
     {
       "src": "/icon-192.png",
@@ -15,6 +16,11 @@
     {
       "src": "/icon-512.png",
       "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "/apple-icon.png",
+      "sizes": "180x180",
       "type": "image/png"
     }
   ]
