--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "firebase": "^10.13.0",
+    "firebase": "^9.23.0",
     "framer-motion": "^11.3.31",
     "lucide-react": "^0.436.0",
     "next": "14.2.7",
@@ -31,6 +31,7 @@
     "react-markdown": "^9.0.1",
     "replicate": "^0.32.0",
     "tailwind-merge": "^3.0.2",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
