--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@tailwindcss/forms": "^0.5.10",
     "ai": "^3.4.33",
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
