--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^3.6.0",
     "firebase": "^9.23.0",
     "framer-motion": "^11.3.31",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.436.0",
     "next": "14.2.7",
     "openai": "^4.85.4",
